Make LABEL act like an inline element rather than inline-block by removing lots of special (and not-well-tested) logic from nsLabelFrame and making it inherit from nsInlineFrame.  This means LABEL will essentially always have 'display: inline', but it's hard to avoid that as long as form controls are implemented in frames rather than content.  b=47149  r=rods  sr=attinasi  a=asa